--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-   "name": "doodle",
-   "version":"0.1",
-   "description": "quadro de pintura colaborativo via node.js",
-   "author": "vettorazi",
-   "repository": {
+  "name": "doodle",
+  "version": "1.0.0",
+  "description": "quadro de pintura colaborativo via node.js",
+  "author": "vettorazi",
+  "repository": {
     "type": "git",
     "url": "https://github.com/vettorazi/desenho"
   },
-  "engines":{
+  "engines": {
     "node": "4.1.1",
     "npm": "2.14.4"
   },
-   "dependencies" : {
-      "express": "4.x",
-      "socket.io": "*"
-   }
+  "dependencies": {
+    "express": "4.13.4",
+    "socket.io": "*"
+  },
+  "license": "MIT"
 }
